Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -202,6 +202,8 @@
     .parallax-container {
         display: flex;
         flex-direction: column;
+        transform-style: unset;
+        -webkit-transform-style: unset;
     }
     .truck {
         position: static;
